convert notebook to script

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exec time :19.533642292022705s\n"
+      "Exec time :28.759572744369507s\n",
+      "-12.561111111111112\n"
      ]
     }
    ],
@@ -97,6 +98,7 @@
     "import time\n",
     "\n",
     "from radarsimpy.rt import rcs_sbr\n",
+    "import numpy as np\n",
     "\n",
     "phi = np.arange(0, 180, 1)\n",
     "theta = 90\n",
@@ -120,12 +122,16 @@
     "print('Exec time :'+str(toc-tic) + 's')\n",
     "\n",
     "rcs = np.concatenate((rcs, rcs))\n",
-    "phi = np.concatenate((phi, -phi))"
+    "phi = np.concatenate((phi, -phi))\n",
+    "average_rcs = np.mean(rcs)\n",
+    "print(average_rcs)\n",
+    "np.savetxt('average_rcs.txt', [average_rcs], fmt='%.18f')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,367 +155,367 @@
          "mode": "lines",
          "name": "",
          "r": [
-          -15,
-          -20,
-          -12,
-          -7,
-          -7,
-          -18,
-          -14,
-          -15,
-          -13,
-          -19,
-          -16,
-          -16,
-          -22,
-          -16,
-          -12,
-          -9,
-          -11,
-          -13,
-          -11,
-          -13,
-          -11,
-          -17,
-          -11,
-          -7,
-          -15,
-          -4,
-          -4,
-          -12,
-          -11,
-          -13,
-          -12,
-          -8,
-          -12,
-          -8,
-          -9,
-          -4,
-          -6,
-          -10,
-          -3,
-          -15,
-          -4,
-          -13,
-          -4,
-          -2,
-          1,
-          -5,
-          -1,
-          -1,
-          -5,
-          -1,
-          0,
-          -1,
-          3,
-          -1,
-          -14,
-          -8,
-          0,
-          -3,
-          0,
-          -7,
-          -1,
-          5,
-          -6,
-          4,
-          -4,
-          -1,
-          -6,
-          0,
-          0,
-          2,
-          4,
-          -1,
-          0,
-          -5,
-          -3,
-          2,
-          -1,
-          0,
-          0,
-          -1,
-          1,
-          -6,
-          4,
-          -12,
-          3,
-          1,
-          5,
-          9,
-          16,
-          7,
-          18,
-          27,
-          30,
-          28,
-          24,
-          17,
-          13,
-          15,
-          5,
-          9,
-          2,
-          2,
-          -2,
-          2,
-          -2,
-          -8,
-          -7,
-          -3,
-          -8,
-          -3,
-          -4,
-          -4,
-          -3,
-          -6,
-          -3,
-          6,
-          5,
-          8,
-          3,
-          -6,
-          -2,
-          0,
-          2,
-          0,
-          -2,
-          -5,
-          -4,
-          -7,
-          -3,
-          -10,
-          -4,
-          -3,
-          -5,
-          -2,
-          -10,
-          -5,
-          0,
-          -1,
-          -10,
-          -12,
-          -9,
-          -2,
-          0,
-          -1,
-          -6,
-          -11,
-          -6,
-          -12,
-          -7,
-          -6,
-          -9,
-          -12,
-          -8,
-          -6,
-          -10,
-          -8,
-          -8,
-          -12,
-          -17,
-          -8,
-          -10,
-          -9,
-          -17,
-          -24,
-          -19,
-          -15,
-          -17,
-          -18,
-          -17,
-          -21,
-          -17,
-          -18,
           -29,
-          -22,
-          -30,
-          -20,
+          -45,
+          -39,
+          -36,
+          -38,
+          -39,
+          -28,
+          -35,
+          -43,
+          -33,
           -31,
+          -40,
+          -31,
+          -35,
+          -46,
+          -34,
+          -32,
+          -36,
           -20,
-          -20,
-          -25,
-          -15,
-          -20,
-          -12,
-          -7,
-          -7,
-          -18,
-          -14,
-          -15,
-          -13,
-          -19,
-          -16,
-          -16,
           -22,
-          -16,
-          -12,
-          -9,
-          -11,
-          -13,
-          -11,
-          -13,
-          -11,
           -17,
-          -11,
-          -7,
+          -20,
+          -23,
           -15,
-          -4,
-          -4,
-          -12,
-          -11,
-          -13,
-          -12,
-          -8,
-          -12,
-          -8,
-          -9,
-          -4,
-          -6,
-          -10,
-          -3,
-          -15,
-          -4,
-          -13,
-          -4,
-          -2,
-          1,
-          -5,
-          -1,
-          -1,
-          -5,
-          -1,
-          0,
-          -1,
-          3,
-          -1,
-          -14,
-          -8,
-          0,
-          -3,
-          0,
-          -7,
-          -1,
-          5,
-          -6,
-          4,
-          -4,
-          -1,
-          -6,
-          0,
-          0,
-          2,
-          4,
-          -1,
-          0,
-          -5,
-          -3,
-          2,
-          -1,
-          0,
-          0,
-          -1,
-          1,
-          -6,
-          4,
-          -12,
-          3,
-          1,
-          5,
-          9,
-          16,
-          7,
-          18,
-          27,
-          30,
-          28,
-          24,
-          17,
-          13,
-          15,
-          5,
-          9,
-          2,
-          2,
-          -2,
-          2,
-          -2,
-          -8,
-          -7,
-          -3,
-          -8,
-          -3,
-          -4,
-          -4,
-          -3,
-          -6,
-          -3,
-          6,
-          5,
-          8,
-          3,
-          -6,
-          -2,
-          0,
-          2,
-          0,
-          -2,
-          -5,
-          -4,
-          -7,
-          -3,
-          -10,
-          -4,
-          -3,
-          -5,
-          -2,
-          -10,
-          -5,
-          0,
-          -1,
-          -10,
-          -12,
-          -9,
-          -2,
-          0,
-          -1,
-          -6,
-          -11,
-          -6,
-          -12,
-          -7,
-          -6,
-          -9,
-          -12,
-          -8,
-          -6,
-          -10,
-          -8,
-          -8,
-          -12,
-          -17,
-          -8,
-          -10,
-          -9,
-          -17,
           -24,
+          -31,
+          -30,
+          -32,
+          -30,
+          -33,
           -19,
+          -10,
+          -13,
+          -16,
+          -10,
+          -9,
+          -14,
+          -5,
+          -11,
+          -10,
+          -31,
+          -10,
+          -14,
+          -22,
+          -20,
+          -8,
+          -5,
+          -17,
+          -9,
+          -5,
+          -7,
+          -15,
+          -5,
+          -16,
+          -5,
+          -4,
+          -6,
+          -15,
+          -21,
+          -1,
+          -2,
+          -12,
+          0,
+          -3,
+          0,
+          4,
+          -3,
+          2,
+          0,
+          -2,
+          0,
+          -3,
+          -10,
+          -5,
+          -8,
+          7,
+          9,
+          2,
+          -16,
+          3,
+          -11,
+          4,
+          3,
+          -7,
+          10,
+          -6,
+          13,
+          13,
+          6,
+          17,
+          16,
+          13,
+          26,
+          29,
+          28,
+          20,
+          14,
+          11,
+          12,
+          14,
+          3,
+          -18,
+          9,
+          7,
+          -6,
+          4,
+          6,
+          0,
+          -11,
+          1,
+          -3,
+          0,
+          -3,
+          -11,
+          5,
+          -1,
+          0,
+          -16,
+          0,
+          -5,
+          -1,
+          -6,
+          -5,
+          -1,
+          -8,
+          -6,
+          -3,
+          -2,
+          -1,
+          -2,
+          -18,
+          -17,
+          -11,
+          -12,
+          -5,
           -15,
           -17,
-          -18,
-          -17,
+          -23,
+          -16,
           -21,
-          -17,
+          -5,
+          -9,
+          -21,
+          -13,
+          -6,
+          -4,
+          -9,
+          -23,
+          -10,
+          -10,
+          -9,
+          -27,
+          -27,
+          -24,
+          -36,
+          -23,
+          -16,
+          -12,
           -18,
+          -11,
+          -18,
+          -13,
+          -15,
+          -32,
+          -28,
+          -34,
+          -36,
           -29,
-          -22,
+          -33,
           -30,
+          -33,
+          -28,
+          -26,
           -20,
+          -24,
+          -32,
+          -52,
+          -42,
+          -49,
+          -33,
+          -29,
+          -45,
+          -39,
+          -36,
+          -38,
+          -39,
+          -28,
+          -35,
+          -43,
+          -33,
           -31,
+          -40,
+          -31,
+          -35,
+          -46,
+          -34,
+          -32,
+          -36,
           -20,
+          -22,
+          -17,
           -20,
-          -25,
-          -15
+          -23,
+          -15,
+          -24,
+          -31,
+          -30,
+          -32,
+          -30,
+          -33,
+          -19,
+          -10,
+          -13,
+          -16,
+          -10,
+          -9,
+          -14,
+          -5,
+          -11,
+          -10,
+          -31,
+          -10,
+          -14,
+          -22,
+          -20,
+          -8,
+          -5,
+          -17,
+          -9,
+          -5,
+          -7,
+          -15,
+          -5,
+          -16,
+          -5,
+          -4,
+          -6,
+          -15,
+          -21,
+          -1,
+          -2,
+          -12,
+          0,
+          -3,
+          0,
+          4,
+          -3,
+          2,
+          0,
+          -2,
+          0,
+          -3,
+          -10,
+          -5,
+          -8,
+          7,
+          9,
+          2,
+          -16,
+          3,
+          -11,
+          4,
+          3,
+          -7,
+          10,
+          -6,
+          13,
+          13,
+          6,
+          17,
+          16,
+          13,
+          26,
+          29,
+          28,
+          20,
+          14,
+          11,
+          12,
+          14,
+          3,
+          -18,
+          9,
+          7,
+          -6,
+          4,
+          6,
+          0,
+          -11,
+          1,
+          -3,
+          0,
+          -3,
+          -11,
+          5,
+          -1,
+          0,
+          -16,
+          0,
+          -5,
+          -1,
+          -6,
+          -5,
+          -1,
+          -8,
+          -6,
+          -3,
+          -2,
+          -1,
+          -2,
+          -18,
+          -17,
+          -11,
+          -12,
+          -5,
+          -15,
+          -17,
+          -23,
+          -16,
+          -21,
+          -5,
+          -9,
+          -21,
+          -13,
+          -6,
+          -4,
+          -9,
+          -23,
+          -10,
+          -10,
+          -9,
+          -27,
+          -27,
+          -24,
+          -36,
+          -23,
+          -16,
+          -12,
+          -18,
+          -11,
+          -18,
+          -13,
+          -15,
+          -32,
+          -28,
+          -34,
+          -36,
+          -29,
+          -33,
+          -30,
+          -33,
+          -28,
+          -26,
+          -20,
+          -24,
+          -32,
+          -52,
+          -42,
+          -49,
+          -33,
+          -29
          ],
          "showlegend": false,
          "subplot": "polar",
