simplified naming scheme of function

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,15 +16,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Nicholas\\Documents\\ISU Spring 2024\\AERE 463\\AERE463-Project-Optimization\\RadarSimPyFunction.py:35: RuntimeWarning: divide by zero encountered in log10\n",
-      "  rcs[phi_idx] = 10 * np.log10(\n"
+      "c:\\Users\\Nicholas\\Documents\\ISU Spring 2024\\AERE 463\\AERE463-Project-Optimization\\rcsFunc.py:35: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in log10\n",
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exec time :23.329712390899658s\n",
+      "Exec time :23.074953079223633s\n",
       "-inf\n",
       "29.794438198549308\n"
      ]
@@ -33,14 +35,14 @@
    "source": [
     "# Script to test the RadarSimPy_Function function from RadarSimPyFunction.py\n",
     "\n",
-    "from RadarSimPyFunction import RadarSimPy_Function\n",
+    "from rcsFunc import rcs\n",
     "\n",
     "target = {\n",
     "    \"model\": 'C:/Users/Nicholas/Documents/ISU Spring 2024/AERE 463/AERE463-Project-Optimization/test_vehicle_mesh.stl',\n",
     "    \"location\": (0, 0, 0),\n",
     "}\n",
     "\n",
-    "[average_rcs, max_rcs] = RadarSimPy_Function(target)"
+    "[average_rcs, max_rcs] = rcs(target)"
    ]
   },
   {
